--- a/Proceduralsedation.html
+++ b/Proceduralsedation.html
@@ -27,6 +27,13 @@
                 <button data-section="Consent" onclick="handleButtonClick(this, 'family gave informed consent: risks/benefits/alternatives discussed')">family</button>
                 <textarea id="ConsentText" placeholder="" onchange="updateRealTimeText('Consent', 'ConsentText')"></textarea>
             </div>
+            
+            <div class="input-group">
+                <h3>Timeout</h3>
+                <button data-section="Timeout" onclick="handleButtonClick(this, 'pre-procedure time out was performed and standard protocol/checklist was utilized as permitted by time/acuity.')">protocol/checklist</button>
+                <button data-section="Timeout" onclick="handleButtonClick(this, 'A formal timeout was deferred given the emergent nature of the procedure')">emergent</button>
+                <textarea id="timeoutText" placeholder="" onchange="updateRealTimeText('Timeout', 'timeoutText')"></textarea>
+            </div>
 
             <!-- Indication Section -->
             <div class="input-group">
@@ -83,7 +90,7 @@
                 <h3>Complications</h3>
                 <button data-section="Complications" onclick="handleButtonClick(this, 'none')">none</button>
                 <button data-section="Complications" onclick="handleButtonClick(this, 'the patient experienced hypoxia during procedural sedation requiring supplemental oxygen')">hypoxia</button>
-                <button data-section="Complications" onclick="handleButtonClick(this, 'the patient experienced decreased respiratory effort requiring BVM ventilation')" >Positive pressure ventilation</button>
+                <button data-section="Complications" onclick="handleButtonClick(this, 'the patient experienced decreased respiratory effort requiring BVM ventilation')" >positive pressure ventilation</button>
                 <textarea id="ComplicationsText" placeholder="" onchange="updateRealTimeText('Complications', 'ComplicationsText')"></textarea>
             </div>
 
