--- a/Proceduralsedation.html
+++ b/Proceduralsedation.html
@@ -125,6 +125,9 @@
             <button onclick="copyToClipboard()">Copy to Clipboard</button>
             <button onclick="clearOutput()">Clear</button>
             
+            <!-- New Note Section -->
+            <p><i>Note</i>: Performing and documenting a consent and timeout are part of the BlueWater procedural sedation quality bundle.</p>
+            
             <div class="reminder-link">
                 <p>Associated procedures: 
                     <a href="reduction.html">Fracture Reduction</a>
