--- a/Proceduralsedation.html
+++ b/Proceduralsedation.html
@@ -126,7 +126,7 @@
             <button onclick="clearOutput()">Clear</button>
             
             <!-- New Note Section -->
-            <p><i>Note</i>: Performing and documenting a consent and timeout are part of the BlueWater procedural sedation quality bundle.</p>
+            <p><i>Note</i>: Performing and documenting consent, timeout, and any complications are part of the BlueWater procedural sedation quality bundle.</p>
             
             <div class="reminder-link">
                 <p>Associated procedures: 
