--- a/index.html
+++ b/index.html
@@ -20,6 +20,19 @@
         <section id="home">
         </section>
 
+         <!-- Documentation Macros-->
+        <section id="documentation-macros">
+            <h2>Documentation Macros</h2>
+            <ul>
+                <li><a href="AMA.html">AMA</a></li>
+                <li><a href="Criticalcare.html">Critical Care</a></li>
+                <li><a href="EKG.html">EKG Interpretation</a></li>
+                <li><a href="MDM.html">MDM Section</a></li>
+                <li><a href="radiologyread.html">Radiology Read</a></li>
+                <li><a href="Sepsisbundle.html">Sepsis Bundle</a></li>
+            </ul>
+        </section>
+        
         <!-- Clinical Decision Tools Section -->
         <section id="decision-tools">
             <h2>Clinical Decision Tools</h2>
@@ -46,19 +59,14 @@
                 <li><a href="Abscess.html">Abscess I/D</a></li>
                 <li><a href="Cardioversion.html">Cardioversion</a></li>
                 <li><a href="Centralline.html">Central Line</a></li>
-                <li><a href="Criticalcare.html">Critical Care</a></li>
                 <li><a href="definitivefracture.html">Def Fx Care</a></li>
                 <li><a href="Dislocation.html">Dislocation</a></li>
-                <li><a href="EKG.html">EKG Interpretation</a></li>
                 <li><a href="Epistaxis.html">Epistaxis</a></li>
                 <li><a href="reduction.html">Fracture Reduction</a></li>
                 <li><a href="Intubation.html">Intubation</a></li>
                 <li><a href="Laceration.html">Laceration</a></li>
                 <li><a href="Lumbarpuncture.html">Lumbar Puncture</a></li>
-                <li><a href="MDM.html">MDM Section</a></li>
-                <li><a href="radiologyread.html">Radiology Read</a></li>
                 <li><a href="Proceduralsedation.html">Sedation</a></li>
-                <li><a href="Sepsisbundle.html">Sepsis Bundle</a></li>
                 <li><a href="Splinting.html">Splinting</a></li>
                 <li><a href="Triggerpoint.html">Trigger Point</a></li>       
             </ul>
