--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                 <li><a href="EKG.html">EKG Interpretation</a></li>
                 <li><a href="MDM.html">MDM Section</a></li>
                 <li><a href="radiologyread.html">Radiology Read</a></li>
+                <li><a href="SBIRT.html">SBIRT</a></li>
                 <li><a href="Sepsisbundle.html">Sepsis Bundle</a></li>
             </ul>
         </section>
