--- a/SBIRT.html
+++ b/SBIRT.html
@@ -39,7 +39,7 @@
             </div>
 
             <!-- MAT -->
-            <h3>MAT</h3>
+            <h3>Medication-assisted treatment (MAT)</h3>
             <div class="input-group">
                 <button data-section="MAT" onclick="handleButtonClick(this, 'the patient was prescribed Suboxone with a plan for outpatient continuance of this regimen')">suboxone</button>
                 <button data-section="MAT" onclick="handleButtonClick(this, 'the patient was prescribed medications to help taper alcohol withdrawal symptoms as an outpatient')">alcohol taper</button>
