--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                 <li><a href="ABCD2.html">ABCD2</a></li>
                 <li><a href="Canadianhead.html">Canadian Head CT</a></li>
                 <li><a href="CHA2DS2VASC.html">CHA2DS2-VASC</a></li>
+                <li><a href="Geneva.html">Geneva Score</a></li>
                 <li><a href="GRACE.html">GRACE Score</a></li>
                 <li><a href="HEARTscore.html">HEART Score</a></li>
                 <li><a href="NEXUS.html">NEXUS C-spine</a></li>
