--- a/SBIRT.html
+++ b/SBIRT.html
@@ -44,6 +44,7 @@
                 <button data-section="MAT" onclick="handleButtonClick(this, 'the patient was prescribed Suboxone with a plan for outpatient continuance of this regimen')">suboxone</button>
                 <button data-section="MAT" onclick="handleButtonClick(this, 'the patient was prescribed medications to help taper alcohol withdrawal symptoms as an outpatient')">alcohol taper</button>
                 <button data-section="MAT" onclick="handleButtonClick(this, 'the patient was prescribed medications to help treat associated symptoms of substance withdrawal')">symptomatic meds</button>
+                <button data-section="MAT" onclick="handleButtonClick(this, 'the patient was provided and/or prescribed naloxone for risk mitigation for possible opioid overdose')">Narcan</button>
                 <textarea id="MATText" placeholder="" onchange="updateRealTimeText('MAT', 'MATText')"></textarea>
             </div>
 
