--- a/Criticalcare.html
+++ b/Criticalcare.html
@@ -43,6 +43,7 @@
                 <button data-section="indications" onclick="handleButtonClick(this, 'management of acute respiratory distress requiring aggressive medical management and frequent reassessments')">Respiratory Distress</button>
                 <button data-section="indications" onclick="handleButtonClick(this, 'medical management of pathologic heart rate and/or rhythm including frequent treatment response reassessments')">Rate/rhythm Control</button>
                 <button data-section="indications" onclick="handleButtonClick(this, 'medical management of anaphylaxis requiring frequent reassessments')">Anaphylaxis</button>
+                <button data-section="indications" onclick="handleButtonClick(this, 'evaluation for acute ischemic stroke with consideration and discussion of thrombolytic utilization')">Ischemic stroke</button>
                 <button data-section="indications" onclick="handleButtonClick(this, 'acute anemia requiring blood transfusion and frequent reassessments')">Anemia/Blood Transfusion</button>
                 <textarea id="indicationsText" placeholder="" onchange="updateRealTimeText('Indications', 'indicationsText')"></textarea>
             </div>
