--- a/EKG.html
+++ b/EKG.html
@@ -80,6 +80,7 @@
                 <button data-section="Conduction" onclick="handleButtonClick(this, 'Conduction', 'right bundle branch block')">RBBB</button>
                 <button data-section="Conduction" onclick="handleButtonClick(this, 'Conduction', 'incomplete right bundle branch block')">incomplete RBBB</button>
                 <button data-section="Conduction" onclick="handleButtonClick(this, 'Conduction', 'left bundle branch block')">LBBB</button>
+                <button data-section="Conduction" onclick="handleButtonClick(this, 'Conduction', 'premature ventricular contractions')">PVCs</button>
                 <button data-section="Conduction" onclick="handleButtonClick(this, 'Conduction', '1st degree heart block')">1st degree heart block</button>
                 <button data-section="Conduction" onclick="handleButtonClick(this, 'Conduction', 'Mobitz type I')">Mobitz type I</button>
                 <button data-section="Conduction" onclick="handleButtonClick(this, 'Conduction', 'Mobitz type II')">Mobitz type II</button>
