--- a/Proceduralsedation.html
+++ b/Proceduralsedation.html
@@ -132,6 +132,7 @@
                 <p>Associated procedures: 
                     <a href="reduction.html">Fracture Reduction</a>
                     <a href="Cardioversion.html">Cardioversion</a>
+                    <a href="Chesttube.html">Chest Tube</a>
                     <a href="Dislocation.html">Dislocation</a>
                 
                 <p>For reminders on procedural sedation billing, please press this link: 
