--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
                 <li><a href="Abscess.html">Abscess I/D</a></li>
                 <li><a href="Cardioversion.html">Cardioversion</a></li>
                 <li><a href="Centralline.html">Central Line</a></li>
+                <li><a href="Chesttube.html">Chest Tube</a></li>
                 <li><a href="definitivefracture.html">Def Fx Care</a></li>
                 <li><a href="Dislocation.html">Dislocation</a></li>
                 <li><a href="Epistaxis.html">Epistaxis</a></li>
