--- a/Criticalcare.html
+++ b/Criticalcare.html
@@ -39,6 +39,7 @@
                 <button data-section="indications" onclick="handleButtonClick(this, 'management of acute sepsis including fluids, IV antibiotics, and frequent reassessments')">Sepsis</button>
                 <button data-section="indications" onclick="handleButtonClick(this, 'management of acute hypotension including fluids and/or pressors and frequent reassessments')">Hypotension</button>
                 <button data-section="indications" onclick="handleButtonClick(this, 'management of an acute neurologic event requiring discussion with consultants, medical management and frequent reassessments')">Neurologic</button>
+                <button data-section="indications" onclick="handleButtonClick(this, 'acute cardiac ischemia requiring emergency medical management')">STEMI/NSTEMI</button>
                 <button data-section="indications" onclick="handleButtonClick(this, 'trauma evaluation including careful examination, ordering and interpretation of traumatic imaging, and frequent reassessments')">Trauma</button>
                 <button data-section="indications" onclick="handleButtonClick(this, 'management of acute respiratory distress requiring aggressive medical management and frequent reassessments')">Respiratory Distress</button>
                 <button data-section="indications" onclick="handleButtonClick(this, 'medical management of pathologic heart rate and/or rhythm including frequent treatment response reassessments')">Rate/rhythm Control</button>
