--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
             <h2>Procedures</h2>
             <ul>
                 <li><a href="Abscess.html">Abscess I/D</a></li>
+                <li><a href="Arterialline.html">Arterial Line</a></li>
                 <li><a href="Cardioversion.html">Cardioversion</a></li>
                 <li><a href="Centralline.html">Central Line</a></li>
                 <li><a href="Chesttube.html">Chest Tube</a></li>
