--- a/POCUSLung.html
+++ b/POCUSLung.html
@@ -33,7 +33,7 @@
                 <button data-section="Indication" onclick="handleButtonClick(this, 'trauma')">trauma</button>
                 <button data-section="Indication" onclick="handleButtonClick(this, 'POCUS confirmed to better clarify findings from an abnormal XRay')">abnormal XR</button>
                 <textarea id="IndicationText" placeholder="" onchange="updateRealTimeText('Indication', 'IndicationText')"></textarea>
-            </div>u
+            </div>
 
             <!-- Views Section -->
             <div class="input-group">
