--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                 <li><a href="EKG.html">EKG Interpretation</a></li>
                 <li><a href="MDM.html">MDM Section</a></li>
                 <li><a href="radiologyread.html">Radiology Read</a></li>
+                <li><a href="rhythmstrip.html">Rhythm Strip</a></li>
                 <li><a href="SBIRT.html">SBIRT</a></li>
                 <li><a href="Sepsisbundle.html">Sepsis Bundle</a></li>
             </ul>
@@ -59,7 +60,6 @@
             <h2>Procedures</h2>
             <ul>
                 <li><a href="Abscess.html">Abscess I/D</a></li>
-                <li><a href="Arterialline.html">Arterial Line</a></li>
                 <li><a href="Cardioversion.html">Cardioversion</a></li>
                 <li><a href="Centralline.html">Central Line</a></li>
                 <li><a href="Chesttube.html">Chest Tube</a></li>
@@ -87,6 +87,7 @@
                 <li><a href="POCUSIVaccess.html">IV access</a></li>
                 <li><a href="POCUSLung.html">Lung</a></li>
                 <li><a href="POCUSObstetric.html">Obstetric</a></li>
+                <li><a href="POCUSOcular.html">Ocular</a></li>
                 <li><a href="POCUSSoft_tissue.html">Soft tissue</a></li>
             </ul>
         </section>
