--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
                 <li><a href="POCUSLung.html">Lung</a></li>
                 <li><a href="POCUSObstetric.html">Obstetric</a></li>
                 <li><a href="POCUSOcular.html">Ocular</a></li>
+                <li><a href="POCUSRenal.html">Renal</a></li>
                 <li><a href="POCUSSoft_tissue.html">Soft tissue</a></li>
             </ul>
         </section>
