--- a/Parkland.html
+++ b/Parkland.html
@@ -42,7 +42,7 @@
             
             <div class="reminder-link">
                 <p>For a graphic showing TBSA by body part, click here: 
-                <a href="parklandburns.jpg" target="_blank">TBSA Graphic</a></p>
+                <a href="Parklandburns.jpg" target="_blank">TBSA Graphic</a></p>
             </div>
         </div>
         
