--- a/POCUSDVT.html
+++ b/POCUSDVT.html
@@ -53,6 +53,8 @@
                 <button data-section="Findings" onclick="handleButtonClick(this, 'normal compressibility is seen in the vein in all visualized fields')">normal</button>
                 <button data-section="Findings" onclick="handleButtonClick(this, 'non-compressibility is noted in the vein')">non-compressibility</button>
                 <button data-section="Findings" onclick="handleButtonClick(this, 'direct clot is visualized in the vein')">direct clot</button>
+                <button data-section="Findings" onclick="handleButtonClick(this, 'a discrete fluid collection is visualized in the popliteral area consistent with a Baker's cyst')">Bakers cyst</button>
+                <button data-section="Findings" onclick="handleButtonClick(this, 'Doppler augmentation appreciated upon pressure to the leg')">Doppler augmentation</button>
                 <textarea id="FindingsText" placeholder="" onchange="updateRealTimeText('Findings', 'FindingsText')"></textarea>
             </div>
 
