--- a/EKG.html
+++ b/EKG.html
@@ -48,6 +48,7 @@
                 <button data-section="Rhythm" onclick="handleButtonClick(this, 'Rhythm', 'atrial fibrillation')">atrial fibrillation</button>
                 <button data-section="Rhythm" onclick="handleButtonClick(this, 'Rhythm', 'atrial flutter')">atrial flutter</button>
                 <button data-section="Rhythm" onclick="handleButtonClick(this, 'Rhythm', 'junctional')">junctional</button>
+                <button data-section="Rhythm" onclick="handleButtonClick(this, 'Rhythm', 'sinus arrhythmia')">sinus arrhythmia</button>
                 <button data-section="Rhythm" onclick="handleButtonClick(this, 'Rhythm', 'paced')">paced</button>
                 <button data-section="Rhythm" onclick="handleButtonClick(this, 'Rhythm', 'supraventricular tachycardia')">supraventricular tachycardia</button>
                 <textarea id="rhythmText" placeholder="" onchange="updateRealTimeText('Rhythm', 'rhythmText')"></textarea>
@@ -81,6 +82,7 @@
                 <button data-section="Conduction" onclick="handleButtonClick(this, 'Conduction', 'incomplete right bundle branch block')">incomplete RBBB</button>
                 <button data-section="Conduction" onclick="handleButtonClick(this, 'Conduction', 'left bundle branch block')">LBBB</button>
                 <button data-section="Conduction" onclick="handleButtonClick(this, 'Conduction', 'premature ventricular contractions')">PVCs</button>
+                <button data-section="Conduction" onclick="handleButtonClick(this, 'Conduction', 'premature atrial contractions')">PACs</button>
                 <button data-section="Conduction" onclick="handleButtonClick(this, 'Conduction', '1st degree heart block')">1st degree heart block</button>
                 <button data-section="Conduction" onclick="handleButtonClick(this, 'Conduction', 'Mobitz type I')">Mobitz type I</button>
                 <button data-section="Conduction" onclick="handleButtonClick(this, 'Conduction', 'Mobitz type II')">Mobitz type II</button>
