--- a/POCUSIVaccess.html
+++ b/POCUSIVaccess.html
@@ -35,6 +35,8 @@
             <!-- Location Section -->
             <div class="input-group">
                 <h3>Location</h3>
+                <button data-section="Location" onclick="handleButtonClick(this, 'left')">left</button>
+                <button data-section="Location" onclick="handleButtonClick(this, 'right')">right</button>
                 <button data-section="Location" onclick="handleButtonClick(this, 'antecubital vein')">antecubital</button>
                 <button data-section="Location" onclick="handleButtonClick(this, 'forearm vein')">forearm</button>
                 <button data-section="Location" onclick="handleButtonClick(this, 'cephalic vein')">cephalic</button>
