--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                 <li><a href="rhythmstrip.html">Rhythm Strip</a></li>
                 <li><a href="SBIRT.html">SBIRT</a></li>
                 <li><a href="Sepsisbundle.html">Sepsis Bundle</a></li>
+                <li><a href="Toothchart.html">Dental Chart</a></li>
             </ul>
         </section>
         
