--- a/Toothchart.html
+++ b/Toothchart.html
@@ -23,11 +23,11 @@
 <body>
 
     <div class="container">
-        <a href="images/tooth_chart.png" target="_blank">
+        <a href="Dentalchart.jpg" target="_blank">
             <img src="Dentalchart.jpg" alt="Tooth Chart" class="tooth-chart">
         </a>
         <br><br>
-        <a href="index.html">← Back to Home</a>
+        <a href="index.html">Back to Home</a>
     </div>
 
 </body>
