--- a/Toothchart.html
+++ b/Toothchart.html
@@ -3,32 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dental Tooth Chart</title>
     <link rel="stylesheet" href="styles.css"> <!-- Link to your main stylesheet -->
-    <style>
-        /* Optional Inline Styling */
-        .container {
-            text-align: center;
-            margin-top: 50px;
-        }
-        .tooth-chart img {
-            max-width: 90%;
-            height: auto;
-            border: 2px solid #ddd;
-            border-radius: 10px;
-            padding: 10px;
-            box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
-        }
-    </style>
 </head>
 <body>
 
+    <!-- Navigation Bar -->
+    <nav>
+        <ul>
+            <li><a href="index.html#home">Home</a></li>
+        </ul>
+    </nav>
+
+    <!-- Main Content -->
     <div class="container">
-        <a href="Dentalchart.jpg" target="_blank">
-            <img src="Dentalchart.jpg" alt="Tooth Chart" class="tooth-chart">
-        </a>
-        <br><br>
-        <a href="index.html">Back to Home</a>
+        
+        <div class="tooth-chart">
+            <a href="Dentalchart.jpg" target="_blank">
+                <img src="Dentalchart.jpg" alt="Tooth Chart" class="responsive-img">
+            </a>
+        </div>
+
+        <br>
+        <a href="index.html"></a>
     </div>
+
+    <footer>
+    </footer>
 
 </body>
 </html>
