--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
                 <li><a href="Intubation.html">Intubation</a></li>
                 <li><a href="Laceration.html">Laceration</a></li>
                 <li><a href="Lumbarpuncture.html">Lumbar Puncture</a></li>
+                <li><a href="Paracentesis.html">Paracentesis</a></li>
                 <li><a href="Proceduralsedation.html">Sedation</a></li>
                 <li><a href="Splinting.html">Splinting</a></li>
                 <li><a href="Triggerpoint.html">Trigger Point</a></li>       
