--- a/Sepsisbundle.html
+++ b/Sepsisbundle.html
@@ -35,8 +35,9 @@
                 <button data-section="initial_management" onclick="handleButtonClick(this, 'blood cultures were sent prior to antibiotic administration')">blood cx</button>
                 <button data-section="initial_management" onclick="handleButtonClick(this, 'IV antibiotics were administered')">antibiotics</button>
                 <button data-section="initial_management" onclick="handleButtonClick(this, 'the patient was ordered for a 30 cc/kg bolus of IV fluids')">30 cc/kg fluid ordered</button>
-                <button data-section="initial_management" onclick="handleButtonClick(this, 'the patient did not have a 30 cc/kg bolus of fluid ordered due to contraindication specified in the chart')">fluid contraindication</button>
-                <textarea id="initial_managementText" placeholder="Explain any variance in sepsis bundle (e.g. gentle fluids for CHF)" onchange="updateRealTimeText('initial_management', 'initial_managementText')"></textarea>
+                <button data-section="initial_management" onclick="handleButtonClick(this, 'given the patients habitus, ideal body weight was used for fluid calculation')">ideal body weight used</button>
+                <button data-section="initial_management" onclick="handleButtonClick(this, 'the patient did not have a 30 cc/kg bolus of fluid ordered due to contraindication')">fluid contraindication</button>
+                <textarea id="initial_managementText" placeholder="Explain any variance in sepsis bundle and/or contraindication to 30 cc/kg fluid bolus here" onchange="updateRealTimeText('initial_management', 'initial_managementText')"></textarea>
             </div>
             
             <!-- Reassessment Section -->
@@ -58,7 +59,7 @@
             <button onclick="copyToClipboard()">Copy to Clipboard</button>
             <button onclick="clearOutput()">Clear</button>
             
-        <p><i>Note</i>: The BlueWater sepsis care quality bundle has the following components for care within three hours of arrival:<br>
+        <p><i>Note</i>: The BlueWater sepsis care quality bundle has the following components for care of patients with sepsis:<br>
 1. Blood culture drawn before antibiotics administered<br>
 2. Lactate drawn<br>
 3. Antibiotic(s) administered<br>
