--- a/index.html
+++ b/index.html
@@ -19,7 +19,16 @@
     <main>
         <section id="home">
         </section>
-
+        
+        <!-- Documentation Macros-->
+        <section id="documentation-macros">
+            <h2>BlueWater Quality Focus</h2>
+            <ul>
+                <li><a href="Intubation.html">Intubation</a></li>
+                <li><a href="NIHSS.html">NIH Stroke Scale</a></li>
+                <li><a href="Sepsisbundle.html">Sepsis Bundle</a></li>
+            </ul>
+        </section>
          <!-- Documentation Macros-->
         <section id="documentation-macros">
             <h2>Documentation Macros</h2>
