--- a/Intubation.html
+++ b/Intubation.html
@@ -79,9 +79,10 @@
             <textarea id="confirmationText" placeholder="" onchange="updateRealTimeText('Confirmation', 'confirmationText')"></textarea>
             
             <h3>Complications</h3>
-            <button data-section="complications" onclick="handleButtonClick(this, 'no complications during the procedure, intubation successful on first pass and O2 sats above 90% throughout procedure')">none, first pass</button>
+            <button data-section="complications" onclick="handleButtonClick(this, 'no complications during the procedure, intubation successful on first pass and O2 sats above 90% throughout procedure')">none, O2 over 90%, first pass</button>
+            <button data-section="complications" onclick="handleButtonClick(this, 'there was hypoxia noted during the intubation with an O2 sat <90% which improved following intubation and oxygenation')">hypoxia, less than 90%</button>
+            <button data-section="complications" onclick="handleButtonClick(this, 'the patient experienced hypotension during or following the intubation')">hypotension</button>
             <button data-section="complications" onclick="handleButtonClick(this, 'multiple attempts were required for intubation')">multiple attempts</button>
-            <button data-section="complications" onclick="handleButtonClick(this, 'there was hypoxia noted during the intubation which improved following intubation and oxygenation')">hypoxia</button>
             <textarea id="complicationsText" placeholder="" onchange="updateRealTimeText('Complications', 'complicationsText')"></textarea>
             
             <h3>Provider</h3>
