--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
         <section id="documentation-macros">
             <h2>BlueWater Quality Focus</h2>
             <ul>
+                <li><a href="Ischemicstroke.html">Ischemic Stroke</a></li>
                 <li><a href="Intubation.html">Intubation</a></li>
                 <li><a href="NIHSS.html">NIH Stroke Scale</a></li>
+                <li><a href="Proceduralsedation.html">Sedation</a></li>
                 <li><a href="Sepsisbundle.html">Sepsis Bundle</a></li>
             </ul>
         </section>
@@ -41,7 +43,6 @@
                 <li><a href="radiologyread.html">Radiology Read</a></li>
                 <li><a href="rhythmstrip.html">Rhythm Strip</a></li>
                 <li><a href="SBIRT.html">SBIRT</a></li>
-                <li><a href="Sepsisbundle.html">Sepsis Bundle</a></li>
             </ul>
         </section>
         
