--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                 <li><a href="GCS.html">GCS Score</a></li>
                 <li><a href="GRACE.html">GRACE Score</a></li>
                 <li><a href="HEARTscore.html">HEART Score</a></li>
+                <li><a href="IBW.html">Ideal Body Weight</a></li>
                 <li><a href="NEXUS.html">NEXUS C-spine</a></li>
                 <li><a href="NIHSS.html">NIH Stroke Scale</a></li>
                 <li><a href="Parkland.html">Parkland Formula</a></li>
