--- a/Laceration.html
+++ b/Laceration.html
@@ -77,6 +77,7 @@
                 <button data-section="suturetechnique" onclick="handleButtonClick(this, 'vicryl sutures')">vicryl</button>
                 <button data-section="suturetechnique" onclick="handleButtonClick(this, 'fast-absorbing gut sutures')">fast-absorbing gut</button>
                 <button data-section="suturetechnique" onclick="handleButtonClick(this, 'simple interrupted sutures')">simple interrupted</button>
+                <button data-section="suturetechnique" onclick="handleButtonClick(this, 'running sutures')">running sutures</button>
                 <button data-section="suturetechnique" onclick="handleButtonClick(this, 'deep dermal sutures placed')">dermal sutures</button>
                 <button data-section="suturetechnique" onclick="handleButtonClick(this, 'subcuticular sutures')">subcuticular sutures</button>
                 <button data-section="suturetechnique" onclick="handleButtonClick(this, 'horizontal mattress sutures')">horizontal mattress sutures</button>
