--- a/Ischemicstroke.html
+++ b/Ischemicstroke.html
@@ -44,7 +44,7 @@
         <div class="input-group">
             <h3>Other Factors</h3>
             <button data-section="other_factors" onclick="handleButtonClick(this, 'the patient’s blood pressure was managed acutely due to hypertension on arrival')">BP management</button>
-            <button data-section="other_factors" onclick="handleButtonClick(this, 'due to concern for a LVO, CTA was ordered in addition to CT non-contrast')">CTA ordered</button>
+            <button data-section="other_factors" onclick="handleButtonClick(this, 'due to concern for a LVO CTA was ordered in addition to CT non-contrast')">CTA ordered</button>
             <textarea id="other_factorsText" placeholder="" onchange="updateRealTimeText('other_factors', 'other_factorsText')"></textarea>
         </div>
     </div>
