--- a/MDM.html
+++ b/MDM.html
@@ -142,7 +142,7 @@
                 </summary>
                 <div class="section-body">
                     <div class="input-group">
-                        <button data-section="Risk" onclick="handleButtonClick(this, 'I considered escalation of patients care including consideration of admissions or transfer)">escalation of care considered</button>
+                        <button data-section="Risk" onclick="handleButtonClick(this, 'I considered escalation of patient\u2019s care including consideration of admission or transfer')">escalation of care considered</button>
                         <button data-section="Risk" onclick="handleButtonClick(this, 'management of the patient included the prescription of medications for ongoing care')">rx management</button>
                         <button data-section="Risk" onclick="handleButtonClick(this, 'management included the use of parenteral controlled substances for pain and/or anxiety management')">parenteral controlled substance</button>
                         <button data-section="Risk" onclick="handleButtonClick(this, 'drug therapy was administered that required intensive monitoring for toxicity')">IV drug therapy</button>
