--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
                 <li><a href="Dislocation.html">Dislocation</a></li>
                 <li><a href="Epistaxis.html">Epistaxis</a></li>
                 <li><a href="reduction.html">Fracture Reduction</a></li>
+                <li><a href="joint.html">Joint Aspiration</a></li>
                 <li><a href="Intubation.html">Intubation</a></li>
                 <li><a href="Laceration.html">Laceration</a></li>
                 <li><a href="Lumbarpuncture.html">Lumbar Puncture</a></li>
