--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
                 <li><a href="definitivefracture.html">Def Fx Care</a></li>
                 <li><a href="Dislocation.html">Dislocation</a></li>
                 <li><a href="Epistaxis.html">Epistaxis</a></li>
+                <li><a href="Foreignbody.html">Foreign Body</a></li>
                 <li><a href="reduction.html">Fracture Reduction</a></li>
                 <li><a href="joint.html">Joint Aspiration</a></li>
                 <li><a href="Intubation.html">Intubation</a></li>
