--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
             <h2>Ultrasound</h2>
             <ul>
                 <li><a href="POCUSAbdomen.html">Abdomen</a></li>
+                <li><a href="POCUSAorta.html">Aorta</a></li>
                 <li><a href="POCUSCardiac.html">Cardiac</a></li>
                 <li><a href="POCUSDVT.html">DVT</a></li>
                 <li><a href="POCUSFast.html">E-FAST</a></li>
