--- a/Laceration.html
+++ b/Laceration.html
@@ -75,6 +75,7 @@
                 <button data-section="suturetechnique" onclick="handleButtonClick(this, 'nylon sutures')">nylon</button>
                 <button data-section="suturetechnique" onclick="handleButtonClick(this, 'prolene sutures')">prolene</button>
                 <button data-section="suturetechnique" onclick="handleButtonClick(this, 'vicryl sutures')">vicryl</button>
+                <button data-section="suturetechnique" onclick="handleButtonClick(this, 'vicryl rapide sutures')">vicryl rapide</button>
                 <button data-section="suturetechnique" onclick="handleButtonClick(this, 'fast-absorbing gut sutures')">fast-absorbing gut</button>
                 <button data-section="suturetechnique" onclick="handleButtonClick(this, 'simple interrupted sutures')">simple interrupted</button>
                 <button data-section="suturetechnique" onclick="handleButtonClick(this, 'running sutures')">running sutures</button>
