--- a/AMA.html
+++ b/AMA.html
@@ -44,8 +44,8 @@
             <!-- Risk Mitigation -->
             <h3>Risk Mitigation</h3>
             <div class="input-group">
-                <button data-section="RiskMitigation" onclick="handleButtonClick(this, 'In order to reduce risk from their decision to leave AMA, I have spoken with an outpatient provider to best coordinate outpatient follow-up')">outpatient follow-up</button>
-                <button data-section="RiskMitigation" onclick="handleButtonClick(this, 'Despite their decision to leave AMA, I have prescribed outpatient medications and informed the patient of this plan')">rx management</button>
+                <button data-section="RiskMitigation" onclick="handleButtonClick(this, 'In order to reduce risk from their decision to leave AMA I have spoken with an outpatient provider to best coordinate outpatient follow-up')">outpatient follow-up</button>
+                <button data-section="RiskMitigation" onclick="handleButtonClick(this, 'Despite their decision to leave AMA I have prescribed outpatient medications and informed the patient of this plan')">rx management</button>
                 <button data-section="RiskMitigation" onclick="handleButtonClick(this, 'I have spoken with the patient’s family to help monitor for return precautions and also encourage the patient to seek ongoing care for their current medical condition')">discussion with family</button>
                 <textarea id="RiskMitigationText" placeholder="" onchange="updateRealTimeText('Risk Mitigation', 'RiskMitigationText')"></textarea>
             </div>
