--- a/Sepsisbundle.html
+++ b/Sepsisbundle.html
@@ -65,6 +65,48 @@
 3. Antibiotic(s) administered<br>
 4. 30mL/kg if hypotension present or Lactate >4 (use ideal body weight in obese patients) or reason why fluid bolus is not appropriate</p>
             
+<section id="sepsis-criteria">
+
+    <h3>SIRS Criteria (≥ 2 Required)</h3>
+    <ul>
+        <li>Temperature &gt; 38°C or &lt; 36°C</li>
+        <li>Heart rate &gt; 90 bpm</li>
+        <li>Respiratory rate &gt; 20 or PaCO₂ &lt; 32 mmHg</li>
+        <li>WBC &gt; 12,000, &lt; 4,000, or &gt; 10% bands</li>
+    </ul>
+
+    <h3>Sepsis</h3>
+    <ul>
+        <li>Suspected or confirmed infection <strong>AND</strong></li>
+        <li>≥ 2 SIRS criteria</li>
+    </ul>
+
+    <h3>Severe Sepsis</h3>
+    <ul>
+        <li>Sepsis <strong>AND</strong> evidence of acute organ dysfunction, such as:</li>
+        <ul>
+            <li>Hypotension responsive to fluids</li>
+            <li>Lactate ≥ 2 mmol/L</li>
+            <li>Creatinine elevation or oliguria</li>
+            <li>Acute mental status change</li>
+            <li>Platelets &lt; 100,000</li>
+            <li>Bilirubin &gt; 2 mg/dL</li>
+            <li>Acute respiratory failure requiring supplemental O₂ or ventilation</li>
+            <li>INR &gt; 1.5 (not on anticoagulation)</li>
+        </ul>
+    </ul>
+
+    <h3>Septic Shock</h3>
+    <ul>
+        <li>Severe sepsis <strong>AND</strong> either:</li>
+        <ul>
+            <li>Persistent hypotension despite adequate fluid resuscitation</li>
+            <li>Lactate ≥ 4 mmol/L even if blood pressure is normal</li>
+        </ul>
+    </ul>
+</section>
+
+            
             <div class="related-procedures">
                 <p>IBW Calculator: 
                     <a href="IBW.html">Ideal Body Weight</a>
