--- a/Criticalcare.html
+++ b/Criticalcare.html
@@ -46,6 +46,7 @@
                 <button data-section="indications" onclick="handleButtonClick(this, 'medical management of anaphylaxis requiring frequent reassessments')">Anaphylaxis</button>
                 <button data-section="indications" onclick="handleButtonClick(this, 'evaluation for acute ischemic stroke with consideration and discussion of thrombolytic utilization')">Ischemic stroke</button>
                 <button data-section="indications" onclick="handleButtonClick(this, 'acute anemia requiring blood transfusion and frequent reassessments')">Anemia/Blood Transfusion</button>
+                <button data-section="indications" onclick="handleButtonClick(this, 'acute electrolyte abnormality that required medical management and frequent monitoring')">Electrolyte Abnormality</button>
                 <textarea id="indicationsText" placeholder="" onchange="updateRealTimeText('Indications', 'indicationsText')"></textarea>
             </div>
 
