--- a/index.html
+++ b/index.html
@@ -37,12 +37,16 @@
             <ul>
                 <li><a href="AMA.html">AMA</a></li>
                 <li><a href="Criticalcare.html">Critical Care</a></li>
+                <li><a href="Exam.html">Physical Exam</a></li>
                 <li><a href="Toothchart.html">Dental Chart</a></li>
                 <li><a href="EKG.html">EKG Interpretation</a></li>
                 <li><a href="MDM.html">MDM Section</a></li>
                 <li><a href="radiologyread.html">Radiology Read</a></li>
                 <li><a href="rhythmstrip.html">Rhythm Strip</a></li>
+                <li><a href="ROS.html">ROS</a></li>
                 <li><a href="SBIRT.html">SBIRT</a></li>
+                <li><a href="Signout.html">Signout</a></li>
+
             </ul>
         </section>
         
